styles.css
/* --------------------Reset and global styles-------------------- */
body {
    display: block;
    margin: 0;
    padding: 0;
    font-family: 'Barlow', sans-serif;
    font-size: 18px;
}

h1, h2 {
    font-family: 'Fraunces', serif;
}

/* --------------------Header-------------------- */
header {
    background-image: url("./images/desktop/image-header.jpg");
    background-size: 100% 100%;
    background-position: cover;
    height: 100vh;
    display: flex;
    flex-direction: column;
}

.menuIcon {
    position: relative;
    left: 200px;
    visibility: hidden;
}

.navbar {
    display: flex;
    flex-direction: row;
    justify-content: space-between;
    padding: 30px;
}

.headerNavLink {
    color: white;
    text-decoration: none;
    margin-left: 15px;
    font-size: 14px;
}

#contactLink {
    background-color: white;
    color: hsl(212, 27%, 19%);
    border-radius: 20px;
    padding: 10px;
}

.head {
    text-align: center;
    color: white;
    font-size: 42px;
    letter-spacing: 10px;
    font-weight: 900;
    align-self: center;
    margin-top: 75px;
}

.arrowIcon {
    width: 40px;
    align-self: center;
    margin-top: 60px;
}

@media(max-width: 750px) {
    header {
        background-image: url("./images/mobile/image-header.jpg");
    }

    .headerNavLink {
        visibility: hidden;
        font-size: 8px;
    }

    .menuIcon {
        visibility: visible;
    }
}

/* --------------------About-------------------- */
#about {
    display: grid;
    grid-template-columns: 1fr 1fr;
    grid-template-rows: 525px 525px;
}

.textBoxNoImage {
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
    padding: 90px;
}

.boldText {
    font-size: 44px;
    color:hsl(212, 27%, 19%);
    font-weight: 900;
    margin-bottom: 10px;
}

.regularText {
    color: hsl(210, 4%, 67%);
    margin-bottom: 40px;
}

.learnMore {
    text-decoration: none;
    font-family: 'Fraunces', serif;
    font-weight: 900;
    color: hsl(212, 27%, 19%);
    background-image: linear-gradient(hsl(51, 100%, 49%) 0 0);
    background-position: center 15px;
    background-size: 100% 7px;
    background-repeat: no-repeat;
    width: 135px;
    text-align: center;
    align-self: flex-start;
}

#transformImage {
    background-image: url("./images/desktop/image-transform.jpg");
    background-position: center;
    background-size: auto;
}

#standOutImage {
    background-image: url("./images/desktop/image-stand-out.jpg");
    background-position: center;
    background-size: auto;
}

@media(max-width: 750px) {
    #about {
        grid-template-areas:
            "area1"
            "area2"
            "area3"
            "area4";
        grid-template-columns: 1fr;
        grid-template-rows: repeat(4, 425px);
    }

    #transformImage {
        background-image: url("./images/mobile/image-transform.jpg");
        grid-area: area1;
    }

    #transformText {
        grid-area: area2;
    }

    #standOutImage {
        background-image: url("./images/mobile/image-stand-out.jpg");
        grid-area: area3;
    }

    #standOutText {
        grid-area: area4;
    }

    .textBoxNoImage {
        padding: 45px;
    }

    .boldText {
        font-size: 32px;
        text-align: center;
    }

    .regularText {
        font-size: 18px;
        text-align: center;
    }

    .learnMore {
        align-self: center;
    }
}

/* --------------------Services-------------------- */
#services {
    display: grid;
    grid-template-columns: 1fr 1fr;
    grid-template-rows: 525px;
}

.textBoxWithImage {
    background-position: center;
    background-size: auto;
    display: flex;
    flex-direction: column;
    justify-content: flex-end;
    align-items: center;
    padding: 25px 125px;
}

#graphicDesign {
    background-image: url("./images/desktop/image-graphic-design.jpg");
}

#graphicHead {
    color: hsl(167, 40%, 24%);
    font-size: 24px;
    margin-bottom: 0;
}

#graphicText {
    color: hsl(167, 40%, 24%);
    text-align: center;
}

#photography {
    background-image: url("./images/desktop/image-photography.jpg");
}

#photographyHead {
    color: hsl(198, 62%, 26%);
    font-size: 24px;
    margin-bottom: 0;
}

#photographyText {
    color: hsl(198, 62%, 26%);
    text-align: center;
}

@media (max-width: 750px) {
    #services {
        grid-template-columns: 1fr;
        grid-template-rows: 525px 525px;
    }

    .textBoxWithImage {
        padding: 25px 50px;
    }
}

/* --------------------Projects-------------------- */
#projects {
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
    padding: 150px 75px;
}

.testimonialHead {
    color:hsl(210, 4%, 67%);
    letter-spacing: 5px;
    font-size: 18px;
    text-align: center;
    margin-bottom: 70px;
    font-weight: 900;
}

.testimonials {
    display: grid;
    grid-template-columns: 1fr 1fr 1fr;
    gap: 35px;
}

.testimonial {
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
}

.headshotWrapper {
    display: flex;
    justify-content: center;
}

.headshot {
    border-radius: 50%;
    width: 50px;
    margin-bottom: 50px;
}

.testimonialText {
    text-align: center;
    color: hsl(232, 10%, 55%);
}

.name {
    text-align: center;
    font-family: 'Fraunces', serif;
    font-size: 24px;
}

.title {
    text-align: center;
    font-size: 14px;
    color: hsl(210, 4%, 67%);
}

.imageGallery {
    display: grid;
    grid-template-columns: 1fr 1fr 1fr 1fr;
}

.imageGallery img {
    width: 25vw;
}

@media (max-width: 750px) {
    #projects {
        padding: 75px 50px;
    }

    .testimonials {
        grid-template-columns: 1fr;
        gap: 50px;
    }

    .testimonialText {
        margin: 25px;
    }

    .name {
        margin: 0 0 25px 0;
    }

    .title {
        margin: 0 0 25px 0;
    }

    .headshot {
        margin-bottom: 0;
    }

    .imageGallery {
        grid-template-columns: 1fr 1fr;
    }

    .imageGallery img {
        width: 50vw;
        height: 50vw;
    }
} 

/* --------------------Footer-------------------- */
footer {
    background-color: hsl(168, 45%, 70%);
    display: flex;
    flex-direction: column;
    align-items: center;
    justify-content: center;
    padding: 50px 50px 0 50px;
}

.footerLogo {
    margin-bottom: 30px;
}

.footerNav {
    margin-bottom: 50px;
}

.footerNav a {
    color: hsl(168, 34%, 41%);
    padding: 0 25px;
}

.socialLinks {
    display: flex;
    align-items: center;
    justify-content: center;
    margin-top: 25px;
}

.socialLinks a img {
    padding: 15px;
}

.attribution { 
    font-size: 11px; 
    text-align: center;
    margin-top: 50px;
}
    
.attribution a {
    color: hsl(228, 45%, 44%);
}

@media(max-width: 750px) {
    .footerNav a {
        visibility: visible;
        font-size: 14px
    }
}

